# skyknit2.0

./: .gitignore  ARCHITECTURE.md  CITATIONS.md  CLAUDE.md  DEV_README.md  IMPLEMENTATION_PLAN.md  PHASE2_STRATEGY.md  README.md  VISION.md  architecture.md  environment.yml  knowledge_base.db  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
checker/: __init__.py  checker.py  joins.py  operations.py  simulate.py  vm_state.py
checker/tests/: test_checker.py  test_extract_edge_counts.py  test_joins.py  test_operations.py  test_simulate.py  test_vm_state.py
docs/: architecture.md  credentials.json.example  llms.md
fillers/: __init__.py  filler.py  ir_builder.py  join_params.py  resolver.py
fillers/tests/: test_filler.py  test_ir_builder.py  test_join_params.py  test_resolver.py
planner/: __init__.py  component_specs.py  dimensions.py  joins.py  manifest_builder.py  planner.py
planner/garments/: drop_shoulder_pullover.py  v1_yoke_pullover.py
planner/tests/: test_component_specs.py  test_dimensions.py  test_joins.py  test_manifest_builder.py  test_planner.py
schemas/: __init__.py  constraint.py  garment.py  ir.py  manifest.py  proportion.py
schemas/tests/: test_constraint.py  test_garment.py  test_init.py  test_ir.py  test_manifest.py  test_proportion.py
scripts/: run_console_demo.py  test_knowledge_base.py
skyknit/: __init__.py  console_demo.py
skyknit/agents/: __init__.py  base_agent.py  design_agent.py
skyknit/api/: generate.py  validate.py
skyknit/checker/: __init__.py  checker.py  joins.py  operations.py  simulate.py
skyknit/conversation/: __init__.py  mixin.py  state.py
skyknit/design/: module.py
skyknit/fabric/: module.py
skyknit/fillers/: __init__.py  filler.py  ir_builder.py  join_params.py  resolver.py
skyknit/knowledge_base/: __init__.py  database.py  schemas.py  (+2 more)
src/: exceptions.py
tests/: test_base_agent.py  test_construction_agent.py  test_conversation_state.py  test_end_to_end.py  test_error_handling.py  test_fabric_agent.py  test_interactive_design_agent.py  test_models.py  test_output_agent.py  test_requirements_agent.py  test_stitch_agent.py  test_validation_agent.py  test_workflow.py
topology/: __init__.py  registry.py  types.py
utilities/: __init__.py  conversion.py  repeats.py  shaping.py  tolerance.py
validator/: __init__.py  compatibility.py  phase1.py  spatial.py
(+118 files in other folders)
