[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["topology*", "utilities*"]

[project]
name = "skyknit"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["topology/tests", "utilities/tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["topology", "utilities"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "topology.tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "utilities.tests.*"
disallow_untyped_defs = false
