[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skyknit*"]

[project]
name = "skyknit"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]
llm = [
    "anthropic>=0.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["skyknit"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "skyknit.parser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "skyknit.writer.*"
ignore_missing_imports = true
